add webComponent type in wrapper

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,25 +4,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <h3>Clickable chips</h3>
-      <button class="e-btn e-mb-16" (click)="changeChipStates()">Flip states</button>
-      <div style="display: flex; flex-direction: row">
-        <div *ngFor="let chip of filteredKeys">
-          <elvia-chip
-            [value]="chip"
-            [isSelected]="filteredValues[chip]"
-            color="orange"
-            type="legend"
-            (isSelectedOnChange)="handleOnChange($event)"
-          ></elvia-chip>
-        </div>
-      </div>
-      Selected values:
-      <span *ngFor="let key of filteredKeys">
-        <span *ngIf="filteredValues[key]">{{ key }},</span>
-      </span>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
@@ -177,6 +159,26 @@
       </div>
     </div>
     Value deleted: {{ deleteValue }}
+
+    <div class="e-bg-white">
+      <h3>Clickable chips</h3>
+      <button class="e-btn e-mb-16" (click)="changeChipStates()">Flip states</button>
+      <div style="display: flex; flex-direction: row">
+        <div *ngFor="let chip of filteredKeys">
+          <elvia-chip
+            [value]="chip"
+            [isSelected]="filteredValues[chip]"
+            color="orange"
+            type="legend"
+            (isSelectedOnChange)="handleOnChange($event)"
+          ></elvia-chip>
+        </div>
+      </div>
+      Selected values:
+      <span *ngFor="let key of filteredKeys">
+        <span *ngIf="filteredValues[key]">{{ key }},</span>
+      </span>
+    </div>
   </div>
 
   <!--Datepicker-->
