--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -1,77 +1,10 @@
 <h1>Angular Preview</h1>
-<div class="e-bg-white">
-  <h3>Paginator</h3>
-  <elvia-pagination
-    numberOfElements="5080"
-    [value]="defaultPaginationValue"
-    [alignment]="'right'"
-    dropdownMenuPosition="auto"
-  ></elvia-pagination>
-  <div style="height: 6rem; display: flex; align-items: center">
-    <elvia-divider type="simple"></elvia-divider>
-  </div>
-  <elvia-pagination
-    numberOfElements="10100"
-    [value]="defaultPaginationValue"
-    [alignment]="'left'"
-    dropdownMenuPosition="auto"
-  ></elvia-pagination>
-  <div style="height: 6rem; display: flex; align-items: center">
-    <elvia-divider type="simple"></elvia-divider>
-  </div>
-  <elvia-pagination
-    numberOfElements="508"
-    [value]="defaultPaginationValue"
-    [alignment]="'left'"
-    dropdownMenuPosition="auto"
-  ></elvia-pagination>
-  <div style="height: 6rem; display: flex; align-items: center">
-    <elvia-divider type="simple"></elvia-divider>
-  </div>
-  <elvia-pagination
-    numberOfElements="5080000"
-    [value]="defaultPaginationValue"
-    [alignment]="'left'"
-    dropdownMenuPosition="auto"
-  ></elvia-pagination>
-  <div style="height: 6rem; display: flex; align-items: center">
-    <elvia-divider type="simple"></elvia-divider>
-  </div>
-</div>
-
 <div class="components-examples">
   <div class="example-wrapper">
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <h3>Paginator</h3>
-      <div style="background: lightgray">
-        <p>alignment: right</p>
-        <elvia-pagination
-          numberOfElements="5080"
-          [value]="defaultPaginationValue"
-          [alignment]="'right'"
-          dropdownMenuPosition="auto"
-        ></elvia-pagination>
-        <div style="height: 32px"><hr /></div>
-        <p>alignment: left</p>
-        <elvia-pagination
-          numberOfElements="10100"
-          [value]="defaultPaginationValue"
-          [alignment]="'left'"
-          dropdownMenuPosition="auto"
-        ></elvia-pagination>
-        <div style="height: 32px"><hr /></div>
-        <p>alignment: left</p>
-        <elvia-pagination
-          numberOfElements="508"
-          [value]="defaultPaginationValue"
-          [alignment]="'left'"
-          dropdownMenuPosition="auto"
-        ></elvia-pagination>
-      </div>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
