feat(datepicker-range): improve cursor interaction

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -13,7 +13,7 @@
         isRequired="true"
       ></elvia-datepicker>
 
-      <elvia-datepicker-range></elvia-datepicker-range>
+      <elvia-datepicker-range hasSelectDateOnOpen="false"></elvia-datepicker-range>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
