--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -9,11 +9,27 @@
       <elvia-datepicker
         [minDate]="minDate"
         [maxDate]="maxDate"
+        [disableDate]="disableDate"
         (valueOnChange)="writeDate($event.detail.value)"
         isRequired="true"
+        clearButtonText="Tøm feltet"
+        label="Custom label"
+        isRequired="true"
+        hasOptionalText="true"
+        (onOpen)="dateOnOpen()"
+        (onClose)="dateOnClose()"
+        (onReset)="dateOnReset()"
+        (valueOnChangeISOString)="changeISO($event.detail.value)"
       ></elvia-datepicker>
 
-      <elvia-datepicker-range hasSelectDateOnOpen="false"></elvia-datepicker-range>
+      <elvia-datepicker-range
+        [labelOptions]="labelOptions"
+        isRequired="true"
+        hasAutoOpenEndDatepicker="true"
+        [minDate]="minDate"
+        [maxDate]="maxDate"
+        [disableDates]="disableDates"
+      ></elvia-datepicker-range>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
