fix(datepicker): wrong format on iso event

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -29,6 +29,7 @@
         [minDate]="minDate"
         [maxDate]="maxDate"
         [disableDates]="disableDates"
+        (valueOnChangeISOString)="changeISO($event.detail.value)"
       ></elvia-datepicker-range>
     </div>
     <!--Inverted version-->
