--- a/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
@@ -41,7 +41,7 @@
             <app-component-subsubsection [sectionTitle]="'Content'">
               <ng-container ngProjectAs="sectionContent">
                 You can have different type of content like text, buttons, input etc. The content will have
-                100% width, unless the content only consists of text, then the max-width is 450px.
+                100% width, unless the content only consists of text, then the recommended max-width is 450px.
               </ng-container>
             </app-component-subsubsection>
             <app-component-subsubsection [sectionTitle]="'Trigger'">
@@ -57,8 +57,8 @@
 
           <app-component-subsubsection [sectionTitle]="'Text'">
             <ng-container ngProjectAs="sectionContent">
-              Recommended width for text popover are 450px. This is measured with the line length and number
-              of characters - to get a good readability.
+              Recommended width for text popover is 450px. This is measured with the line length and number of
+              characters - to get a good readability.
             </ng-container>
           </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Custom content'">
