Lego-1875 Lego-1981 wrapper cleanup and fix event dispatching (#1066)
* remove propTypes from config, fix setProps event trigger

* add webComponent type in wrapper

* fix window check in component-wrapper

* remove style from wrapper constructor, remove style tag generation

* fix accordion content slot

* bump packages, add changelogs

* fix wrapper build script

* remove react as dev dependency from components, not needed

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -186,22 +186,25 @@
     </div>
     Value deleted: {{ deleteValue }}
 
-    <h3>Clickable chips</h3>
-    <div style="display: flex; flex-direction: row">
-      <div *ngFor="let chip of filteredKeys">
-        <elvia-chip
-          [value]="chip"
-          [isSelected]="filteredValues[chip]"
-          color="orange"
-          type="legend"
-          (isSelectedOnChange)="handleOnChange($event)"
-        ></elvia-chip>
+    <div class="e-bg-white">
+      <h3>Clickable chips</h3>
+      <button class="e-btn e-mb-16" (click)="changeChipStates()">Flip states</button>
+      <div style="display: flex; flex-direction: row">
+        <div *ngFor="let chip of filteredKeys">
+          <elvia-chip
+            [value]="chip"
+            [isSelected]="filteredValues[chip]"
+            color="orange"
+            type="legend"
+            (isSelectedOnChange)="handleOnChange($event)"
+          ></elvia-chip>
+        </div>
       </div>
+      Selected values:
+      <span *ngFor="let key of filteredKeys">
+        <span *ngIf="filteredValues[key]">{{ key }},</span>
+      </span>
     </div>
-    Selected values:
-    <span *ngFor="let key of filteredKeys">
-      <span *ngIf="filteredValues[key]">{{ key }},</span>
-    </span>
   </div>
 
   <!--Datepicker-->
