--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -9,6 +9,7 @@
         label="testing something"
         [value]="selectedDropdownItem"
         [items]="dropdownItems"
+        isMulti="true"
       ></elvia-dropdown>
     </div>
     <!--Inverted version-->
@@ -190,7 +191,7 @@
   <!--Datepicker-->
   <div class="example-wrapper">
     <h3>DatePicker</h3>
-    <elvia-datepicker [value]="date"></elvia-datepicker>
+    <elvia-datepicker [value]="date" (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
   </div>
   <!--Date range picker-->
   <div class="example-wrapper">
