remove e-table__sort-header

--- a/packages/elvis/percy/components/table.html
+++ b/packages/elvis/percy/components/table.html
@@ -250,19 +250,19 @@
       <table class="e-table" aria-label="Beskrivelse av tabellen">
         <thead>
           <tr>
-            <th scope="col" class="e-table__sort-header">
+            <th scope="col">
               Periode
-              <span class="e-table__sort-icon e-table__sort-icon--inactive">
+              <!-- <span class="e-table__sort-icon e-table__sort-icon--inactive">
                 <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
                 <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
-              </span>
+              </span> -->
             </th>
-            <th scope="col" class="e-table__sort-header">
+            <th scope="col">
               Beløp
-              <span class="e-table__sort-icon e-table__sort-icon--up">
+              <!--  <span class="e-table__sort-icon e-table__sort-icon--up">
                 <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
                 <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
-              </span>
+              </span> -->
             </th>
           </tr>
         </thead>
