add e-link--shortcut to deprecated classes

--- a/packages/elvis/src/components/link.scss
+++ b/packages/elvis/src/components/link.scss
@@ -391,6 +391,7 @@ $grey-ten: colors.color('grey-10');
       }
     }
 
+    // ALSO DEPRECATED
     &.e-link--shortcut {
       box-shadow: none;
       border: none;
